
@startuml UMLKataBank

' Definir la clase base CuentaBancaria
class CuentaBancaria {
    - saldo: double
    - tasaAnual: double
    - numeroRetiros: int
    - numeroConsignaciones: int
    - comisionMensual: double
    --
    + consignar(monto: double): void
    + retirar(monto: double): void
    + calcularInteresMensual(): void
    + extractoMensual(): void
    + imprimir(): String
}

' Definir la clase derivada CuentaAhorros
class CuentaAhorros {
    - activa: boolean
    --
    + retirar(monto: double): void
    + consignar(monto: double): void
    + extractoMensual(): void
    + imprimir(): String
}

' Definir la clase derivada CuentaCorriente
class CuentaCorriente {
    - sobregiro: double
    --
    + retirar(monto: double): void
    + consignar(monto: double): void
    + extractoMensual(): void
    + imprimir(): String
}

' Relaciones entre clases
CuentaAhorros --|> CuentaBancaria
CuentaCorriente --|> CuentaBancaria

@enduml
